ormconfig: adiçao das configuraçoes do ormconfig

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,17 +1,19 @@
-{ 
-    "type": "mongodb", 
-    "host": "localhost", 
-    "port": 27017, 
-    "database": "system", 
-    "synchronize": true, 
+{
+    "type": "mongodb",
+    "host": "localhost",
+    "port": 27017,
+    "database": "sys",
+    "synchronize": true,
+    "logging": true,
     "username": "root",
     "password": "docker",
-    "entities": [ 
-       "./src/models/*.ts" 
-    ], 
-    "migrations": [ "./src/database/migrations/*.ts" 
-    ],
-    "cli": { 
-       "migrationsDir": "./src/database/migrations" 
-    } 
- }
+    "useUnifiedTopology": true,
+    "entities": ["./src/models/*.ts"],
+    "migrations": ["./src/database/migrations/*.ts"],
+    "cli": {
+        "migrationsDir": "./src/database/migrations"
+    },
+    "extra": {
+        "authSource": "admin"
+    }
+}
