--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "no-use-before-define": "off",
         "prettier/prettier": "error",
         "class-methods-use-this": "off",
+        "no-console": "off",
         "@typescript-eslint/no-use-before-define": [
             "error"
         ],
