--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "mongodb": "^3.6.4",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
